# anno-tools

./: .gitignore  pyproject.toml
notebooks/: get_island_tiles.py  islands_a7m_to_np.ipynb  islands_ad_to_np.ipynb  optimize_coverage.ipynb
src/: anno_designer.py  utils.py
